<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lenovo.shop.AddstoreActivity">
    <TextView
        android:text="@string/buildStore"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left" />

    <EditText
        android:id="@+id/et2"
        android:hint="@string/inpuBossName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     />
    <EditText
        android:id="@+id/et1"
        android:hint="@string/inputStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
<Button
    android:id="@+id/btn1"
    android:text="@string/queren"
    android:textSize="18sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</LinearLayout>
