<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:screenOrientation="landscape"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:ignore="ExtraText">
 <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:textSize="35sp"
    android:textColor="#00008b"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yonghuming"
        android:textSize="20sp"
        android:textColor="#483d8b"/>
    <EditText
        android:id="@id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="text"
        android:textCursorDrawable="@null"
        tools:ignore="LabelFor" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:textSize="20sp"
        android:textColor="#483d8b"/>
    <EditText
        android:id="@id/edittext3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="text"
        android:textCursorDrawable="@null"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mima"
        android:textSize="20sp"
        android:textColor="#483d8b"/>
    <EditText
        android:id="@id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/queren"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:backgroundTint="#1C86EE"/>
    <Button
        android:id="@+id/fanhui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:backgroundTint="#1C86EE"/>
</LinearLayout>
