<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/denglu"
        android:textSize="40sp"
        android:textColor="#00008b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yonghuming"
        android:textSize="20sp"
        android:textColor="#483d8b"/>
    <EditText
        android:id="@id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="text"
        android:textCursorDrawable="@null"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mima"
        android:textSize="20sp"
        android:textColor="#483d8b"/>
    <EditText
        android:id="@+id/edittext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/queren"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:backgroundTint="#1C86EE"
        />
      <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zhuce"
        android:textSize="20sp"
        android:textColor="#00bfff"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        />
</LinearLayout>
